apps/seerr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seerr
  labels:
    network-ingress-homepage: "true"
