apps/seerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: seerr
  labels:
    app: seerr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
          resources:
            requests:
              cpu: "100m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: seerr-config
              mountPath: /app/config
            - name: seerr-logs
              mountPath: /app/config/logs
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            periodSeconds: 10
            failureThreshold: 3

      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr-config-pvc
        - name: seerr-logs
          emptyDir:
            medium: Memory
            sizeLimit: 32Mi
