apps/seerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: seerr
spec:
  selector:
    app: seerr
  ports:
    - port: 80
      targetPort: 5055
