apps/seerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seer-lan
  namespace: seerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.wevelsiep.com`) | Host(`netflix.wevelsiep.com`)
      kind: Rule
      services:
        - name: seerr
          port: 80
